# smart-cc-app

./: .clineignore  .clinerules  .gitignore  .graphifyignore  AUDIT_REPORT.md  README.md  REDDIT_INSIGHTS.md  SUPPORTED_CARDS.md  docker-compose.yml  fetch_sbi.js  main.py  package-lock.json.playwright-backup  playwright.config.js  pyproject.toml  semgrep-final-results.txt  simplyclick_intelligence_report.json  test_fastapi.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  create_kiwi_migration.py  fix_caps.py  fix_caps_tests.py  fix_db.py  fix_test_caps.py  get_kiwi_card.py  inspect_db.py  main.py  make_admin.py  pyproject.toml  run_sbi_real.py  run_test.py  sbi_simplyclick.html  semgrep-final-results.txt  test.txt  test_api.py  test_diff_engine.py  test_eval.py  test_eval_2.py  test_extract.py  test_feedback_api.py  test_fetch.py  test_ingest.py  test_matrix.js  test_mitc_generator.py  test_optimizer.py  test_pdf.py  test_rec.py  test_rec_api.py  test_request.py  test_snapshot.py  update_pipeline.py  update_service.py
backend/adaptive_intelligence/: orchestrator.py  schemas.py
backend/agents/: chat_agent.py  recommendation_agent.py  statement_parser_agent.py
backend/ai/: __init__.py  client.py  context_builder.py  schemas.py  synthesizer.py  validator.py
backend/alembic/: env.py  script.py.mako
backend/api/: deps.py
backend/auth/: __init__.py  dependencies.py  schemas.py  security.py  service.py
backend/behavioral_memory/: confidence.py  drift_analyzer.py  engine.py  models.py
backend/card_intelligence/: audit.py  fetcher.py  models.py  monitor_models.py  monitor_service.py  routes.py  schemas.py  service.py  storage.py  workspace_services.py
backend/cards/: enums.py  exceptions.py  schemas.py
backend/core/: __init__.py  auth.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  responses.py  utils.py
backend/fee_waiver/: __init__.py  engine.py  explainability.py  projections.py  schemas.py  scoring.py  service.py
backend/insights/: orchestrator.py  schemas.py
backend/merchant_intelligence/: __init__.py  aliases.py  categories.py  matcher.py  repository.py  schemas.py  service.py
backend/merchants/: __init__.py  cache.py  categorizer.py  constants.py  exceptions.py  fuzzy.py  llm_resolver.py  matcher.py  models.py  normalizer.py  pending_review_repository.py  repository.py  resolution_engine.py  routes.py  schemas.py  service.py
backend/milestones/: engine.py
backend/models/: __init__.py  audit_log.py  behavioral_profile.py  card.py  card_catalog.py  enums.py  feedback.py  ingestion.py  insight_suppression.py  notification.py  optimization_profile.py  recommendation_audit.py  refresh_token.py  transaction.py  transaction_optimization.py  user.py  user_card.py  waitlist.py
backend/monthly_intelligence/: orchestrator.py  schemas.py
backend/portfolio_evolution/: health.py  models.py  narrative.py  service.py  value_density.py
backend/recommendations/: exceptions.py  explainers.py  orchestrator.py  routes.py  schemas.py  service.py  utils.py
(+590 files in other folders)
