[project]
name = "smart-cc-backend"
version = "0.1.0"
description = "Smart CC - AI-powered credit card optimization platform"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Smart CC Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "uuid7>=0.1.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.1.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "aiosqlite>=0.22.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an async test",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = [
  "agents",
  "api",
  "auth",
  "core",
  "models",
  "repositories",
  "reward_engine",
  "rules",
  "schemas",
  "services",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
